--- a/.github/workflows/collect.yaml
+++ b/.github/workflows/collect.yaml
@@ -65,7 +65,7 @@ jobs:
           fi
 
       - name: Collect
-        run: python -u subscribe/collect.py  --delay 5000 --overwrite --invisible
+        run: python -u subscribe/collect.py  --delay 5000 --overwrite --invisible --all
 
       - name: Timestamp
         run: date
